# voicelink

./: .gitignore  README.md  Start-VoiceLink.ps1  check_db.py  example.py  example_auto_detect.py  example_chunked.py  example_chunked_llm.py  example_debug.py  inspect_db.py  pyproject.toml  pytest.ini  setup_autostart.ps1  start_voicelink.bat  test_auto_switch.py  voicelink_service.py
docker/: Dockerfile.web  README.md  docker-compose.yml  test_ollama.py
docs/: architecture.md  e2e-testing.md  progress.md  todo.md  usage.md
md/: progress.md  spec.md  todo.md  troubleshoot.md  usage.md
tests/e2e/: conftest.py  test_cli_info_virtual_mic.py  test_cli_list_devices.py  test_cli_record.py  test_cli_setup.py  test_cli_stream.py
voicelink/: __init__.py  auto_detect.py  capture.py  chunked_recorder.py  cli.py  config.py  devices.py  logging_config.py  platform_utils.py  recorder.py  session.py  stream.py  title_generator.py  vad.py  virtual_mic.py  whisper.py
voicelink/glossary/: __init__.py  extractor.py  generator.py  transcriber.py
web/: __init__.py  api.py
web/static/: index.html
