[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voicelink"
version = "0.1.0"
description = "Cross-platform system audio capture tool with DSPy-powered glossary generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "VoiceLink Contributors"}
]
keywords = ["audio", "capture", "system-audio", "transcription", "glossary", "dspy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]

dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "click>=8.1.0",
    "httpx>=0.25.0",
    "websockets>=12.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
glossary = [
    "dspy-ai>=2.4.0",
    "openai>=1.0.0",
]
mp3 = [
    "pydub>=0.25.0",
]
vad = [
    "webrtcvad>=2.0.10",
]
all = [
    "voicelink[openai,glossary,mp3,vad]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
voicelink = "voicelink.cli:main"

[project.urls]
Homepage = "https://github.com/voicelink/voicelink"
Documentation = "https://github.com/voicelink/voicelink#readme"
Repository = "https://github.com/voicelink/voicelink"

[tool.setuptools.packages.find]
where = ["."]
include = ["voicelink*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
